--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,11 @@ find_package(SDL2 REQUIRED)
 add_subdirectory(libyuv EXCLUDE_FROM_ALL)
 target_include_directories(yuv PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libyuv/include)
 
+if (ENABLE_ASAN)
+    message(STATUS "build with ASAN")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
+endif ()
+
 set(imgui_src_dir "${CMAKE_CURRENT_SOURCE_DIR}/imgui")
 file(GLOB imgui_src_files ${imgui_src_dir}/*.cpp)
 add_library(imgui_sdl2_impl
